--- a/Client/Client/Client.csproj
+++ b/Client/Client/Client.csproj
@@ -52,6 +52,12 @@
     <Compile Include="Ganadores10min.Designer.cs">
       <DependentUpon>Ganadores10min.cs</DependentUpon>
     </Compile>
+    <Compile Include="HoraFecha.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="HoraFecha.Designer.cs">
+      <DependentUpon>HoraFecha.cs</DependentUpon>
+    </Compile>
     <Compile Include="PartidasGanadas.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -74,6 +80,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Ganadores10min.resx">
       <DependentUpon>Ganadores10min.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="HoraFecha.resx">
+      <DependentUpon>HoraFecha.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="PartidasGanadas.resx">
       <DependentUpon>PartidasGanadas.cs</DependentUpon>
