--- a/Client/Client/Client.csproj
+++ b/Client/Client/Client.csproj
@@ -382,6 +382,9 @@
   <ItemGroup>
     <None Include="bin\Debug\jj.JPG" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="bin\Debug\activarsonido.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
